@@ -1,3 +1,7 @@
+2016-08-09  Carl Hetherington  <cth@carlh.net>
+
+	* Improve rendering of outlined burnt-in subtitles a bit.
+
 2016-08-04  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.9.9 released.
